<resources>
    <string name="app_name">BIM493_Assignment3</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Login Application</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="prompt_nameorsurname">Name and Surname</string>
    <string name="prompt_age">Age</string>
</resources>
